# cpp-cmake-googletest

./: .gitignore  CMakeLists.txt  README.md
include/: my_functions.h  mylib.h
src/: CMakeLists.txt  main.cpp  my_functions.cpp
tests/: CMakeLists.txt  test_main.cpp
